style/index.css
/* ... */
.header-h1-3 {
  color: #250601;
  font-size: 128px;
  line-height: 100%;
  font-weight: 400;
  letter-spacing: 0em;
}

.header-h1-3.header-h1 {
  font-size: 12vw;
}

.header-h1-4 {
  color: #250601;
  font-size: 12vw;
  line-height: 100%;
  font-weight: 400;
  letter-spacing: 0em;
}

@media screen and (max-width: 767px) {
  .cursor {
    display: none;
  }
  /* for the menu hover effect */
  .menu img {
    transform: translate(60%, -280%);
  }
  .navlinks {
    display: none;
    grid-column-gap: 2vw;
    grid-row-gap: 2vw;
  }

  .link-button-m {
    font-size: 3vw;
  }

  .navphonnum {
    grid-column-gap: 2vw;
    grid-row-gap: 2vw;
    grid-column-start: 3;
  }

  .vectors-wrapper-2 {
    width: 6vw;
    height: 5vw;
  }

  .midlepart {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
  }

  .paragraph {
    font-size: 4vw;
  }

  .paragraph.hero-p {
    font-size: 3vw;
  }

  .paragraph.about-p {
    font-size: 3.6vw;
  }

  .paragraph.accent {
    color: #3e241d;
  }

  .vectors-wrapper-3 {
    width: 25px;
    height: 25px;
  }

  .header-h1 {
    font-size: 13vw;
  }

  .items {
    width: 100%;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .menu-lable {
    font-size: 6vw;
  }

  .dich-name {
    font-size: 4vw;
  }

  .dich-discription {
    font-size: 3vw;
  }

  .menu-line {
    width: 100%;
  }

  .sections {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .item-1 {
    width: 60%;
  }

  .item-2 {
    bottom: 18px;
  }

  .mapcontact {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
  }

  .mapimage {
    width: 100%;
  }

  .contactoptions {
    width: 100%;
    grid-column-gap: 30px;
    grid-row-gap: 30px;
  }

  .our-contact {
    font-size: 10vw;
  }

  .faq {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
  }

  .faqlinep {
    width: 100%;
  }

  .answered-text {
    font-size: 3.7vw;
  }

  .footer {
    grid-column-gap: 40px;
    grid-row-gap: 40px;
  }

  .content {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    grid-column-gap: 5vw;
    grid-row-gap: 5vw;
  }

  .link-button-s {
    font-size: 3vw;
  }

  .pharagraf {
    font-size: 3vw;
  }

  .link-button-ss {
    font-size: 2.3vw;
  }

  .body {
    grid-column-gap: 100px;
    grid-row-gap: 100px;
  }

  .navgrid {
    grid-column-gap: 16px;
    grid-template-areas: ". Area";
  }

  .first-duo {
    width: 120%;
  }

  .second-duo {
    width: 120%;
  }

  .faq-questions {
    font-size: 5vw;
  }

  .faq-questions.answered-color {
    color: #250601;
  }

  .footer-info-text {
    font-size: 3.3vw;
  }

  .image-4 {
    max-width: 130%;
  }

  .footer-links-container {
    -webkit-justify-content: space-around;
    -ms-flex-pack: distribute;
    justify-content: space-around;
  }

  .contact-hero-contain {
    -webkit-box-orient: vertical;
    -webkit-box-direction: reverse;
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    grid-column-gap: 3vw;
    grid-row-gap: 3vw;
  }

  .contact-hero-img {
    width: 100%;
  }

  .contact-hero-img.contact-image1 {
    width: 60%;
  }

  .contact-hero-img.contact-image2 {
    right: 30px;
    width: 50%;
  }

  .contact-page-contact-container {
    padding-right: 40px;
    padding-left: 40px;
  }
}
/* ... */

